fix routes yaml
